--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "dev": "ts-node src/main.ts",
     "test-config": "ts-node src/test-config.ts",
     "test-server-config": "ts-node src/test-server-config.ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "check-ffplay": "ffplay -version",
+    "check-audio": "node check-audio-devices.js"
   },
   "dependencies": {
     "@types/dotenv": "^6.1.1",
     "dotenv": "^16.6.1",
     "node-wav": "^0.0.2",
     "node-windows": "^1.0.0-beta.8",
-    "speaker": "^0.5.4",
     "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/ws": "^8.5.10",
+    "pkg": "^5.8.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
