--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/dotenv": "^6.1.1",
     "dotenv": "^16.6.1",
+    "loudness": "^0.4.2",
     "node-wav": "^0.0.2",
     "node-windows": "^1.0.0-beta.8",
     "ws": "^8.14.2"
